Bugfix/purchase icon alignment (#77)
* Align margins for all overlay content item text

--- a/src/Main/Menu/Menu.css
+++ b/src/Main/Menu/Menu.css
@@ -14,26 +14,12 @@
   display: none;
 }
 
-/* TODO - del me? */
-/* .overlay {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 5rem 8rem;
-  z-index: 2;
-  outline: none;
-  background: transparent;
-} */
-
-
 .overlay-content {
   width: 100%;
   height: 100%;
   position: relative;
   display: flex;
+  align-items: flex-start;
   flex-direction: column;
   justify-content: center;
   padding: 5rem 8rem;
@@ -41,7 +27,6 @@
   outline: none;
   background: transparent;
 }
-
 
 .overlay-modal {
   position: absolute;
@@ -54,6 +39,7 @@
 
 .overlay-svg {
   position: absolute;
+  align-items: flex-start;
   top: 0;
   left: 0;
   width: 100%;
@@ -78,7 +64,6 @@
   width: 20px;
   height: 20px;
   position: relative;
-  /* left: 0; */
   bottom: 0;
   margin-top: 10px;
   z-index: 10001;
@@ -98,50 +83,34 @@
   width: 200px;
 }
 
-.overlay-controls {
-  width: 77%;
-}
-
-.control-item {
+.overlay-content-item {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
 }
 
-.control-icon {
+.overlay-content-icon {
   position: relative;
   width: 60px;
   height: 30px;
 }
 
-.control-instructions {
-  font-size: 12px;
-  margin-left: -30px;
-}
-
-.purchase-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: 100;
-  width: 110px;
-}
-
-.purchase-container:hover {
+.purchase-link:hover {
   cursor: pointer;
   opacity: 0.5;
 }
 
-.purchase-icon-link {
-  font-size: 26px;
-  line-height: 36px;
-  margin: auto 20px auto 5px;
+.purchase-link {
+  text-decoration: underline;
+}
+
+.overlay-content-item-text{
+  margin-left: -20px;
 }
 
 .enter-container {
   display: flex;
+  align-self: center;
   justify-content: center;
   margin-top: 10px;
   font-weight: 100;
@@ -164,14 +133,9 @@
 }
 
 @media screen and (max-width: 56em) {
-  /* TODO delme?*/
-  /* .overlay {
-    padding: 0 4rem;
-    font-size: 15px;
-  } */
   .overlay-content {
     padding: 0 4rem;
-    font-size: 15px;
+    font-size: 14px;
   }
   .overlay-svg svg {
     height: 100%;
@@ -179,20 +143,12 @@
   }
   .overlay-header-message {
     padding-top: 30px;
-    font-size: 14px;
   }
   .overlay-button {
     font-size: 17px;
   }
-  .control-instructions {
+  .overlay-content-item-text {
     font-size: 12px;
-    margin-left: -20px;
-  }
-  .purchase-container {
-    font-size: 10px;
-  }
-  .purchase-icon-link {
-    margin-right: 30px;
   }
   .enter-container {
     font-size: 17px;
@@ -210,24 +166,17 @@
     font-size: 14px;
     margin-bottom: 5px;
   }
-  .control-item.hide-in-mobile {
+  .overlay-content {
+    align-items: center;
+  }
+  .overlay-content-item.hide-in-mobile {
     display: none;
   }
   .overlay-header-message {
     font-size: 11px;
   }
-  .control-instructions {
+  .overlay-content-item-text {
     font-size: 10px;
-    margin-left: -20px;
-  }
-  .purchase-container {
-    width: 100px;
-    font-size: 10px;
-    margin-left: 0;
-  }
-  .purchase-icon-link{
-    font-size: 20px;
-    margin-right: 20px;
   }
   .enter-container {
     font-size: 10px;
